# backup

./: .coverage  .flake8  .gitignore  pyproject.toml  readme.md
.github/workflows/: python-app.yml  test.yml
backupsearch/: __init__.py  backup.py  dict_field_ops.py  fetch_data.py  id_field_list_ops.py  id_field_ops.py  main.py  settings.py  string_list_ops.py  string_ops.py
filter_csv_generic/: date_field_ops.py  dict_field_ops.py  id_field_list_ops.py  id_field_ops.py  main.py  settings.py  string_list_ops.py  string_ops.py
src/backup/: __init__.py  backup.py  date_field_ops.py  dict_field_ops.py  fetch_data.py  id_field_list_ops.py  id_field_ops.py  settings.py  string_list_ops.py  string_ops.py
tests/: __init__.py  test_main.py
tests/test_data/: 115_original_id_missing.csv  filter_results_0 -creative_creators lessThan 1953.csv  filter_results_total.csv  testdata.csv  testdata2.csv
tests/test_data/results/: filter_results_0.csv  filter_results_1.csv  filter_results_2.csv  filter_results_3.csv
tests/test_data/results_old/: filter_results_0.csv  filter_results_1.csv  filter_results_2.csv  filter_results_3.csv
