[tool.poetry]
name = "backupsearch"
version = "0.4.0"
description = ""
authors = ["Thomas <oeth@aarhus.dk>"]
include = ["pyproject.toml"]
# packages = [{include = "backupsearch"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

[tool.poetry.scripts]
backup = "backupsearch.main:main"

[tool.poetry.group.dev.dependencies]
coverage = "^7.2.3"
black = "^23.3.0"
ruff = "^0.0.261"
mypy = "^1.2.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["tests"]
